overlapping resolved

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,6 +1,8 @@
 /* Header Styles */
 #navheader {
   background-color: transparent;
+  position: fixed;
+  z-index: 1000;
 }
 
 .fixed-top {
